/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package totseries.Modelo;

/**
 *
 * @author mrviciao
 */
public class Actor extends Artista{
    public Actor(String id, String nom, String pais){
        super(id, nom, pais);
    }
}
