@startuml

left to right direction

'title Diagrama de Dominio para TotSeries

namespace Controlador {
    class Totseries{
    ==
    +int verEpisodio(int serie, int temporada, int episodio)
    +void verCatalogo()
    +void registrar(datos)
    +void verMejoresEpisodios()
    }
    
}

namespace java.util {
    class Scanner
}

namespace Vista {
    class Consola{
    ==
    +void escriu(String s)
    +void escriu(Int i)
    +void escriu(float f)
    +int llegeixInt()
    +string llegeixString()
    +Date LlegeixDataSistema()
    }
}

namespace Model {

    
    class Registro{
    ==
    +boolean hasUsuario(string username)
    +registrar(datos)
    }

    class Cliente

    class Usuario {
        -username
        -password
        -nombre
        -pais
        -nacimiento
        ==
        +Usuario(datos)
    }
    
    
    class Vip
    class Administrador{
        ==
        hacerVip(Usuario usuario):Void
    }

    

    class Factura{
        -float total
        -Date fecha
    }
    
    class Catalogo{
        ==
        +string toString()
        +void getMejoresEpisodios()
        +bool existeEpisodio(int serie, int temporada, int episodio)
    }

    class Temporada{
        -int numero
        ==
        +string toString()
        +getMejoresEpisodios()
        +bool existeEpisodio(int episodio)
    }

    class Serie{
        -int numero
        ==
        +string toString()
        +getMejoresEpisodios()
        +bool existeEpisodio(int temporada, int episodio)
    }
    class Valoracion{
        -int nota
        -string comentario
    }
    
    class Episodio {
        -nombre
        -duracion
        -idioma
        -fecha
        -descripción
        -valoracion_media
        ==
        +Episodio()
        +string toString()
    }

    
    abstract class Artista {
        -nombre
        -nacionalidad
    }

    class Productora {
        -string nombre
        -int identificador
        -Date añoCreacion
    }

    class Actor
    class Director

    Usuario "1" -- "1..* | facturas" Factura : tiene >  
    Registro "1" -- "* | usuarios" Usuario : contine >
    Registro "1" -- "* | administradores" Administrador : contine >

    Cliente  <|-- Usuario
    Cliente  <|-- Administrador
    Usuario  <|-- Vip
    Artista  <|-- Actor
    Artista  <|-- Director

    Catalogo "1" *-- "1..* | series" Serie : consta >
    Serie "1" *-- "1..* | temporadas" Temporada : consta >
    Serie "1..*" -- "1..* | artistas" Artista : tiene >
    Serie "1..*" - "1..* | productoras" Productora : tiene >
    Temporada "1" *-- "1..* | episodios" Episodio : consta >
    Episodio "1" --- "* | valoraciones" Valoracion : tiene >

}

Controlador.Totseries "1" -- "1 | catalogo" Model.Catalogo : tiene >
Controlador.Totseries "1" -- "1 | registro" Model.Registro : tiene >
Controlador.Totseries "1" -- "1" Vista.Consola : Usa
java.util.Scanner "-sc | 1" <- "1" Vista.Consola : Usa 
@enduml
